[gd_scene format=3 uid="uid://da34n51ibanh7"]

[ext_resource type="Script" uid="uid://d0rh8l5gdmvjd" path="res://view/ui/SelectingNpcs/SelectingNpcs.gd" id="1_ynnbe"]
[ext_resource type="StyleBox" uid="uid://ut7fn6457uqd" path="res://view/ui/Themes/npc_button_normal.tres" id="2_ihkuh"]
[ext_resource type="StyleBox" uid="uid://ccwoqfbe535jq" path="res://view/ui/Themes/npc_model_button_purple.tres" id="2_sx88k"]
[ext_resource type="Script" uid="uid://3dxks0ymphyc" path="res://view/ui/SelectingNpcs/model_npc_button_panel.gd" id="3_sx88k"]
[ext_resource type="Texture2D" uid="uid://c75jrp57x4wfs" path="res://icon.svg" id="5_xolgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sx88k"]
bg_color = Color(0.28627452, 0.3019608, 0.49411765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ptyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sx88k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doc8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ln7tu"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8rh0f"]
bg_color = Color(0.94509804, 0.91764706, 1, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w8aa"]
bg_color = Color(0.28627452, 0.3019608, 0.49411765, 1)
corner_radius_top_left = 10000
corner_radius_top_right = 10000
corner_radius_bottom_right = 10000
corner_radius_bottom_left = 10000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umjr0"]
bg_color = Color(0.54509807, 0.42745098, 0.6117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrobd"]
bg_color = Color(0, 0, 0, 0.24705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea14s"]
bg_color = Color(0.28627452, 0.3019608, 0.49411765, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nb4k0"]
bg_color = Color(0.43529412, 0.45882353, 0.70980394, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks8t7"]
bg_color = Color(0.31580526, 0.31580526, 0.31580526, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wl5ax"]
bg_color = Color(0.6, 0.6, 0.6, 0.63529414)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SelectingNpcs" type="Control" unique_id=859715756]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ynnbe")

[node name="Panel" type="Panel" parent="." unique_id=570866536]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sx88k")

[node name="Panel" type="Panel" parent="Panel" unique_id=1495398078]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 10.0
offset_right = -30.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7ptyv")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel" unique_id=1232015480]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/Panel/VBoxContainer" unique_id=322495836]
custom_minimum_size = Vector2(0, 66)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sx88k")

[node name="Label" type="Label" parent="Panel/Panel/VBoxContainer/Panel" unique_id=1698806613]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -156.5
offset_right = 156.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Amiguinhos"

[node name="Panel2" type="Panel" parent="Panel/Panel/VBoxContainer" unique_id=1648544317]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_doc8f")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Panel/VBoxContainer/Panel2" unique_id=1550131157]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/scrollbar_v_separation = 5
theme_override_styles/panel = SubResource("StyleBoxFlat_ln7tu")

[node name="NpcsButtonsContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer" unique_id=1649152079]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ModelNpcButtonPanel" type="Panel" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer" unique_id=1561664695]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("2_sx88k")
script = ExtResource("3_sx88k")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel" unique_id=1455474213]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer" unique_id=1280902983]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Container" type="Container" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer" unique_id=1155365794]
layout_mode = 2

[node name="NpcName" type="Label" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer" unique_id=949918205]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "<NPC NAME>"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 5

[node name="Panel" type="Panel" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer" unique_id=791611596]
custom_minimum_size = Vector2(260, 260)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8rh0f")

[node name="NpcSprite" type="TextureRect" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer/Panel" unique_id=952876778]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.12
anchor_right = 0.88
anchor_bottom = 0.88
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_xolgm")
expand_mode = 3
stretch_mode = 4

[node name="Panel" type="Panel" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer/Panel" unique_id=638929920]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_2w8aa")

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer/Panel/Panel" unique_id=152761143]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer" unique_id=2122870115]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 22

[node name="Container" type="Container" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2" unique_id=1552330056]
layout_mode = 2

[node name="HealthContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2" unique_id=684615936]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2/HealthContainer" unique_id=1624909552]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2/HealthContainer" unique_id=1343188241]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_umjr0")
theme_override_styles/fill = SubResource("StyleBoxFlat_lrobd")
value = 66.06
show_percentage = false

[node name="HungerContainer" type="HBoxContainer" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2" unique_id=1612001132]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2/HungerContainer" unique_id=1725195223]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2/HungerContainer" unique_id=1699707672]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ea14s")
theme_override_styles/fill = SubResource("StyleBoxFlat_lrobd")
value = 66.06
show_percentage = false

[node name="SelectNpcButton" type="Button" parent="Panel/Panel/VBoxContainer/Panel2/ScrollContainer/NpcsButtonsContainer/ModelNpcButtonPanel/VBoxContainer/VBoxContainer2" unique_id=577033580]
custom_minimum_size = Vector2(180, 44)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = ExtResource("2_ihkuh")
toggle_mode = true
text = "Selecionar"

[node name="BoxContainer" type="BoxContainer" parent="Panel/Panel/VBoxContainer" unique_id=621917457]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 35.4

[node name="Start" type="Button" parent="Panel/Panel/VBoxContainer/BoxContainer" unique_id=1954224443]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_nb4k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ks8t7")
theme_override_styles/hover = SubResource("StyleBoxFlat_wl5ax")
text = "Jogar"
language = "pt_BR"

[connection signal="pressed" from="Panel/Panel/VBoxContainer/BoxContainer/Start" to="." method="_on_start_button_pressed"]
